src/objects/SB_Cuenta_Pregunta__c.object
<CustomObject>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SB - Cuenta - Preguntas</relationshipLabel>
        <relationshipName>SB_Cuenta_Preguntas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DependenciaNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DependenciaNo</label>
        <referenceTo>SB_Cuenta_Pregunta__c</referenceTo>
        <relationshipLabel>SB - Cuenta - Preguntas (DependenciaNo)</relationshipLabel>
        <relationshipName>SB_Cuenta_Preguntas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posicion__c</fullName>
        <label>Posicion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pregunta__c</fullName>
        <label>Pregunta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respuesta__c</fullName>
        <label>Respuesta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Super_Ball_Nodo__c</fullName>
        <label>Super Ball - Nodo</label>
        <referenceTo>Super_Ball_Nodo__c</referenceTo>
        <relationshipLabel>SB - Cuenta - Preguntas</relationshipLabel>
        <relationshipName>SB_Cuenta_Preguntas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Super_Ball_Pregunta__c</fullName>
        <label>Super Ball - Pregunta</label>
        <referenceTo>Super_Ball_Pregunta__c</referenceTo>
        <relationshipLabel>SB - Cuenta - Preguntas (Super Ball - Pregunta)</relationshipLabel>
        <relationshipName>SB_Cuenta_Preguntas2</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dependenciaSi__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>dependenciaSi</label>
        <referenceTo>SB_Cuenta_Pregunta__c</referenceTo>
        <relationshipLabel>SB - Cuenta - Preguntas</relationshipLabel>
        <relationshipName>SB_Cuenta_Preguntas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>esHija__c</fullName>
        <defaultValue>false</defaultValue>
        <label>esHija</label>
        <type>Checkbox</type>
    </fields>
    <label>SB - Cuenta - Pregunta</label>
    <nameField>
        <label>Nombre de SB - Cuenta - Pregunta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SB - Cuenta - Preguntas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>